# DSLR

./: .gitignore  README.md  dslr.py  logreg_predict.py  logreg_train.py  pyproject.toml  setup.sh  train.py
tools/: accuracy_check.py
utils/: utils.py
visualize/: describe.py  histogram.py  pair_plot.py  scatter_plot.py
